[gd_scene load_steps=10 format=3 uid="uid://cepo2xhyk4vm8"]

[ext_resource type="Script" uid="uid://dhei31d31cgiw" path="res://Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://dxllrkbbbko2o" path="res://asset/576_324 player.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://c27mr7o8g4l2q" path="res://Player/plaer_camera.gd" id="3_hqtel"]
[ext_resource type="Script" uid="uid://b0n313avlvpxl" path="res://Player/dash.gd" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://dhyj7j8ia4dor" path="res://Player/sheild.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://c4esi3ypetvo8" path="res://Player/combat_component.gd" id="6_fhl08"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(187.625, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k53q1"]
radius = 10.337079
height = 26.378653

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k53q1"]
size = Vector2(65.915, 27.076223)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 5
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 137.5)
shape = SubResource("RectangleShape2D_hqtel")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("6_fhl08")

[node name="DashComponent" type="Node" parent="."]
script = ExtResource("3_i3pqv")

[node name="DashTimer" type="Timer" parent="DashComponent"]
one_shot = true

[node name="DashCooldown" type="Timer" parent="DashComponent"]
one_shot = true

[node name="ShieldComponent" type="Node" parent="."]
script = ExtResource("5_sweqy")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 36.615)
scale = Vector2(8.9, 8.9)
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_k53q1")

[node name="PunchHitbox" type="Area2D" parent="."]
position = Vector2(120.085, 27.68)
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHitbox"]
position = Vector2(22.957497, 4.319998)
scale = Vector2(1, 8.79)
shape = SubResource("RectangleShape2D_k53q1")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
anchor_mode = 0
script = ExtResource("3_hqtel")

[connection signal="area_entered" from="PunchHitbox" to="CombatComponent" method="_on_punch_hitbox_area_entered"]
